# lsp-framework

./: CMakeLists.txt  lsp.pc.in
lsp/: messagehandler.cpp  messagehandler.h  serialization.h  uri.cpp  version.h
